# usg-radius

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  config.example.json  config.schema.json
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
benches/: radius_server_bench.rs  server_benchmarks.rs
crates/: README.md
crates/radius-proto/: Cargo.toml
crates/radius-proto/src/: auth.rs  dynauth.rs  eap.rs  kat.rs  lib.rs  validation.rs
crates/radius-proto/src/attributes/: attribute.rs  types.rs
crates/radius-proto/src/eap/: eap_teap.rs
crates/radius-proto/src/packet/: code.rs
crates/radius-server/: Cargo.toml
crates/radius-server/src/: access.rs  audit.rs  buffer_pool.rs  cache.rs  coa.rs  config.rs  eap_auth.rs  health.rs  lib.rs  main.rs  metrics.rs  mgmt.rs  policy.rs  policy_enforce.rs  radsec.rs  server.rs  tls_certs.rs
crates/radius-server/src/state/: config.rs  error.rs  mod.rs  session_manager.rs
deploy/: README.md
deploy/base/: cilium-bgp.yaml  cilium-lb-ippool.yaml  kustomization.yaml  namespace.yaml  radius-config.secret.yaml  radius-deployment.yaml  radius-service-internal.yaml  radius-service-lb.yaml
deploy/cilium/: values-k3s.yaml  values-k8s.yaml
deploy/monitoring/: grafana-dashboard.json
deploy/overlays/k3s/: README.md  kustomization.yaml
deploy/overlays/k8s/: README.md  kustomization.yaml
deploy/overlays/uk8w/: .gitignore  kustomization.yaml  radius-advertisement.yaml  radius-anycast-pool.yaml  radius-service-lb.yaml
deploy/ui/: .gitignore  deployment.yaml  ingress.yaml  kustomization.yaml  oauth2-proxy.yaml  radius-ui-oidc.secret.example.yaml  service.yaml
docs/: HA_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml  zensical.toml
docs/docs/: index.md
docs/docs/deployment/: DEPLOYMENT.md  FREERADIUS_MIGRATION.md  HIGH_AVAILABILITY.md  PERFORMANCE.md  QUICKSTART.md
docs/docs/development/: ROADMAP.md  UI_AND_POLICY_PLAN.md  WORKSPACE.md
docs/docs/getting-started/: installation.md
docs/docs/protocol/: RFC-COMPLIANCE.md
docs/docs/security/: mgmt-api-auth.md
examples/: README.md
examples/configs/: access-policy.example.json
k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  metallb.yaml  namespace.yaml  networkpolicy.yaml  secret.example.yaml  service.yaml  tls-secret.example.yaml  valkey.yaml
k8s/overlays/hostnet/: kustomization.yaml
tests/: backend_e2e_tests.rs  integration_tests.rs
tools/: Containerfile.eapol_test  radius_load_test.rs
ui/: .dockerignore  .gitignore  Dockerfile  README.md
ui/bff/: Cargo.toml
ui/bff/src/: handlers.rs  main.rs
ui/web/: index.html  package-lock.json  package.json  vite.config.ts
ui/web/src/: App.tsx  api.ts  main.tsx
ui/web/src/pages/: Clients.tsx  Dashboard.tsx  Placeholder.tsx  Policy.tsx  Sessions.tsx  Users.tsx
