[workspace]
members = ["crates/radius-proto", "crates/radius-server"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
authors = ["John Edward Willman V <john.willman.1@us.af.mil>"]
license = "Apache-2.0"
repository = "https://github.com/192d-Cyberspace-Control-Squadron/usg-radius"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
hmac = "0.12"
md5-digest = { package = "md-5", version = "0.10" }
md5 = "0.8"
rand = "0.9"
sha2 = "0.10"

# TLS (for EAP-TLS, EAP-TTLS, PEAP)
rustls = "0.23"
x509-parser = "0.18"
# `std` enables the PEM reader API (replaces the unmaintained rustls-pemfile).
pki-types = { package = "rustls-pki-types", version = "1.12", features = ["std"] }

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Network
ipnetwork = "0.21"

# Caching and concurrency
dashmap = "6.1"

# Async traits
async-trait = "0.1"

# Regular expressions
regex = "1.10"

# Time
chrono = "0.4"

# HTTP client (for CRL/OCSP fetching)
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
url = "2.5"

# HTTP server (for health checks and metrics)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# LDAP
ldap3 = "0.12"

# Database. The `macros` feature is intentionally omitted: the code uses only the
# runtime `sqlx::query(...)` API (no compile-time `query!`/`FromRow`). Omitting it
# drops `sqlx-macros-core`, which otherwise pulls every driver (mysql/sqlite) and
# the unpatched `rsa` crate (RUSTSEC-2023-0071) into the tree.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
] }
bcrypt = "0.17"
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Development
hex = "0.4"
tempfile = "3.24"
criterion = "0.8"
base64 = "0.22"

# Internal crates
radius-proto = { path = "crates/radius-proto" }
radius-server = { path = "crates/radius-server" }

[package]
name = "usg-radius-workspace"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
radius-proto.workspace = true
radius-server.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rand.workspace = true
dashmap.workspace = true

[[bin]]
name = "radius_load_test"
path = "tools/radius_load_test.rs"

[features]
default = ["observability", "tls"]
tls = ["radius-proto/tls", "radius-server/tls"]
observability = ["radius-server/observability"]
revocation = ["radius-proto/revocation"]

[dev-dependencies]
criterion.workspace = true
bcrypt.workspace = true
base64.workspace = true

[[bench]]
name = "packet_benchmarks"
harness = false

[[bench]]
name = "server_benchmarks"
harness = false

[[bench]]
name = "radius_server_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
