[package]
name = "radius-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RADIUS protocol implementation (RFC 2865, 2866, 2869, 5997)"

[dependencies]
hmac.workspace = true
md5-digest.workspace = true
md5.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# TLS dependencies (for EAP-TLS, EAP-TTLS, PEAP)
rustls = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
pki-types = { workspace = true, optional = true }

# Revocation checking (CRL/OCSP)
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
tls = ["dep:rustls", "dep:x509-parser", "dep:pki-types"]
revocation = ["tls", "serde", "dep:reqwest", "dep:url", "dep:chrono", "dep:dashmap"]
