[package]
name = "radius-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RADIUS server implementation"

[[bin]]
name = "usg-radius"
path = "src/main.rs"

[dependencies]
radius-proto.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnetwork.workspace = true
dashmap.workspace = true
regex.workspace = true
rand.workspace = true
chrono.workspace = true
clap.workspace = true
ldap3.workspace = true
sqlx.workspace = true
bcrypt.workspace = true
argon2.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
rustls = { workspace = true, optional = true }

# Async traits (always needed for StateBackend)
async-trait.workspace = true

# HTTP server for health checks and metrics
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true
tempfile.workspace = true

[features]
default = []
tls = ["radius-proto/tls", "dep:rustls"]
observability = ["dep:axum", "dep:tower", "dep:tower-http"]
